Add scripts and notebooks

--- a/trulens-test/trulens-quickstart.ipynb
+++ b/trulens-test/trulens-quickstart.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "d54cba2c-ef6e-4f2b-902f-dcb12fca395e",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
     "\n",
     "virtual_recorder = TruVirtual(\n",
     "    app_name=\"RAG\",\n",
-    "    app_version=\"simple\",\n",
+    "    app_version=\"simple-v2\",\n",
     "    app=virtual_app,\n",
     "    feedbacks=[f_context_relevance, f_groundedness, f_qa_relevance],\n",
     ")"
@@ -737,10 +737,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "59f2a115-edfb-490c-a43f-9e3ad2232dd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "/mnt/docker/work/sd/notebooks/.venv/lib/python3.11/site-packages/trulens/core/feedback/feedback.py:974: UserWarning: Feedback function Context Relevance with aggregation <function mean at 0x7d8658392200> had no inputs.\n",
+      "  warnings.warn(\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "/mnt/docker/work/sd/notebooks/.venv/lib/python3.11/site-packages/trulens/feedback/llm_provider.py:286: UserWarning: No supporting evidence provided. Returning score only.\n",
+      "  warnings.warn(\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "/mnt/docker/work/sd/notebooks/.venv/lib/python3.11/site-packages/trulens/feedback/llm_provider.py:1521: UserWarning: Failed to process and remove trivial statements. Proceeding with all statements.\n",
+      "  warnings.warn(\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] [Errno 2] No such file or directory:\n",
+      "[nltk_data]     '/home/tibi/nltk_data/tokenizers/punkt_tab.zip'\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n",
+      "[nltk_data] Error with downloaded zip file\n"
+     ]
+    }
+   ],
    "source": [
     "virtual_records = virtual_recorder.add_dataframe(df)"
    ]
