added missing file

--- a/trulens-test/trulens-quickstart.ipynb
+++ b/trulens-test/trulens-quickstart.ipynb
@@ -854,9 +854,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ragastest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ragastest"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
